@@ -1,4 +1,5 @@
 RAYLIB_MODELS_PATH = "../raylib_dll/raylib/examples/models/"
+RAYLIB_MODELS_SHADERS_PATH = "../raylib_dll/raylib/examples/models/resources/shaders/"
 RAYLIB_TEXT_PATH = "../raylib_dll/raylib/examples/text/"
 RAYLIB_TEXTURE_PATH = "../raylib_dll/raylib/examples/textures/"
 RAYLIB_AUDIO_PATH = "../raylib_dll/raylib/examples/audio/"
